--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,8 @@
 name: Run test normally
 on:
   push:
-test:
+jobs:
+  test:
     runs-on: ubuntu-latest-4-cores-public
     strategy:
       matrix:
