--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ on:
   push:
 jobs:
   test:
-    runs-on: ubuntu-latest-4-cores-public
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         java-version: [ 17 ]
