Test workflow alter5

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Run test normally
 on:
   push:
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -17,8 +17,16 @@ jobs:
           cache: maven
       - name: License check
         run: mvn -B --fail-fast license:check
+      - name: Build with Maven
+        run: mvn -B --fail-fast -Pedantic -Dspotbugs.skip -Dmaven.wagon.http.retryHandler.class=standard -Dmaven.wagon.http.retryHandler.count=3 -Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false -Dmaven.wagon.httpconnectionManager.ttlSeconds=120 verify javadoc:javadoc
+
+  test:
+    needs: build # This specifies that "Test with Maven" depends on "Build with Maven"
+    runs-on: ubuntu-latest
+    steps:
       - name: Test with Maven
         run: mvn -pl graylog-storage-elasticsearch7 test -Dtest=org.graylog.storage.elasticsearch7.views.ElasticsearchBackendUsingCorrectIndicesTest
         env:
           JAVA_OPTS: -Xmx6G
           TIMEOUT_MULTIPLIER: 2.0
+
