--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,14 +18,27 @@ jobs:
       - name: License check
         run: mvn -B --fail-fast license:check
       - name: Build with Maven
-        run: mvn -B --fail-fast -Pedantic -Dspotbugs.skip -Dmaven.wagon.http.retryHandler.class=standard -Dmaven.wagon.http.retryHandler.count=3 -Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false -Dmaven.wagon.httpconnectionManager.ttlSeconds=120 verify javadoc:javadoc
+        run: |
+          mvn -B --fail-fast -Pedantic -Dspotbugs.skip -Dmaven.wagon.http.retryHandler.class=standard -Dmaven.wagon.http.retryHandler.count=3 -Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false -Dmaven.wagon.httpconnectionManager.ttlSeconds=120 verify javadoc:javadoc
+          # Upload the build artifacts
+          actions/upload-artifact@v2
+          with:
+            name: build-artifacts
+            path: target # Adjust the path to match your build output directory
 
   test:
-    needs: build # This specifies that "Test with Maven" depends on "Build with Maven"
+    needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: build-artifacts
+          path: build # Adjust the path to match the directory where you want to download the artifacts
+
       - name: Test with Maven
-        run: mvn -pl graylog-storage-elasticsearch7 test -Dtest=org.graylog.storage.elasticsearch7.views.ElasticsearchBackendUsingCorrectIndicesTest
+        run: |
+          mvn -pl graylog-storage-elasticsearch7 test -Dtest=org.graylog.storage.elasticsearch7.views.ElasticsearchBackendUsingCorrectIndicesTest
         env:
           JAVA_OPTS: -Xmx6G
           TIMEOUT_MULTIPLIER: 2.0
