--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: build-artifacts
-          path: build # Adjust the path to match the directory where you want to download the artifacts
+          path: target # Adjust the path to match the directory where you want to download the artifacts
 
       - name: Test with Maven
         run: |
